--- a/css/style.css
+++ b/css/style.css
@@ -643,6 +643,64 @@
       margin-left: 1.5rem;
       margin-top: 0.7rem; }
 
+.messenger-con--middle-grid {
+  width: 100%;
+  height: 100%;
+  margin-top: -1.5rem;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(10, 10%); }
+  .messenger-con--middle-grid--msg-con {
+    border-radius: 0.8rem;
+    margin-left: 0.6rem;
+    width: 96%;
+    height: 120%;
+    -webkit-border-radius: 0.8rem;
+    -moz-border-radius: 0.8rem;
+    -ms-border-radius: 0.8rem;
+    -o-border-radius: 0.8rem;
+    display: flex;
+    transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+    .messenger-con--middle-grid--msg-con:hover {
+      transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      background-color: #4d4f50; }
+    .messenger-con--middle-grid--msg-con--img {
+      margin-top: 0.3rem;
+      margin-left: 1.2rem;
+      border-radius: 50%;
+      height: 5.5rem;
+      width: 5.5rem;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%; }
+      .messenger-con--middle-grid--msg-con--img--details {
+        margin-top: 0.7rem;
+        margin-left: 1.3rem; }
+        .messenger-con--middle-grid--msg-con--img--details--name {
+          color: #E4E6EB;
+          font-size: 1.4rem;
+          font-family: 'Roboto', sans-serif;
+          font-weight: bold; }
+        .messenger-con--middle-grid--msg-con--img--details--msg {
+          color: #E4E6EB;
+          font-size: 1.2rem;
+          font-family: 'Roboto', sans-serif;
+          margin-top: 0.6rem; }
+          .messenger-con--middle-grid--msg-con--img--details--msg--time {
+            color: #E4E6EB;
+            font-size: 1.2rem;
+            font-family: 'Roboto', sans-serif;
+            margin-left: 4rem; }
+
 *,
 *::after,
 *::before {
